# wgputest

./: .gitignore  Cargo.toml  README.md  gen_spv.sh  todo.rim
assets/shaders/: shader.frag
notes/: todo.rim
src/: main.rs  shader.frag  shader.vert
