[package]
name = "wgputest"
version = "0.1.0"
authors = ["Leonard Pauli <leonardpauli@me.com>"]
edition = "2018"
description = "Playing with wgpu"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {version = "0.14.0", features = ["spirv", "vulkan-portability"]}
winit = "0.27.3"
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
bytemuck = "1.12.1"

crossbeam-channel = "0.5.6"
notify = "5.0.0"

[package.metadata.bundle]
name = "wgputest"
identifier = "com.leonardpauli.wgputest"
#icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.1.0"
resources = ["assets"]
copyright = "Copyright (c) Leonard Pauli 2020-2021. All rights reserved."
category = "Developer Tool"
short_description = "Playing with wgpu."
long_description = """
Playing with wgpu...
:)
"""
